footer tweak, off to the office!

--- a/themes/codebreu/index.html
+++ b/themes/codebreu/index.html
@@ -69,9 +69,9 @@
 	</div>
 
 	<footer class="footer" role="contentinfo">
-		<article class="inner">
+		<div class="wrapper">
 			&copy; <a target="_blank" title="brewerlogic.com" href="http://brewerlogic.com">Adam Brewer</a> &amp; <a target="_blank" title="stuuuuugoooooooooo" href="http://stugoo.co.uk">Stu Grant</a> {{ config.copywrite }}. <a title="@codebreu" target="_blank" href="http://twitter.com/codebreu">Twitter</a>
-		</article>
+		</div>
 	</footer>
 
 	<script type="text/javascript">
