--- a/themes/codebreu/index.html
+++ b/themes/codebreu/index.html
@@ -57,26 +57,13 @@
 
 		{% else %} <!-- Single page shows individual blog post -->
 
-		<section class="main-content">
+			<section class="main-content">
 
 				{{ content }}
 
-				<script type="text/javascript">
-			        var disqus_shortname = 'codebreu',
-			        	disqus_identifier = "{{ page.title }}";
-			        (function() {
-			            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-			            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-			            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-			        })();
-			    </script>
-			    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-			    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+			</section>
 
-
-
-		</section>
-		<aside class="main-aside">
+			<aside class="main-aside">
 
 				<h2>Posts</h2>
 
@@ -97,9 +84,9 @@
 						{% endif %}
 					{% endfor %}
 				</ol>
-		</aside>
+			</aside>
 
-	{% endif %}
+		{% endif %}
 
 
 	</div>
@@ -112,6 +99,20 @@
 		</div>
 	</footer>
 
+	{% if is_front_page %}
+	{% else %}
+		<script type="text/javascript">
+	        var disqus_shortname = 'codebreu',
+	        	disqus_identifier = "{{ page.title }}";
+	        (function() {
+	            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+	            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+	            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+	        })();
+	    </script>
+	    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+	    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+	{% endif %}
 	<script src="{{ theme_url }}/js/script.js"></script>
 
 </body>
